# ap0dl

./: disclaimer.md  pyproject.toml  readme.md
ap0dl/: __main__.py
ap0dl/core/: __version__.py  package_resolver.py
ap0dl/core/cli/: http_client.py
ap0dl/core/cli/commands/: download.py  grab.py  schedule.py  search.py  stream.py  update.py
ap0dl/core/cli/helpers/: banner.py  constants.py  intelliq.py  rpc.py  searcher.py
ap0dl/core/cli/helpers/players/: base_player.py
ap0dl/core/codebase/downloader/: handle.py
ap0dl/core/codebase/helpers/: __init__.py  superscrapers.py
ap0dl/core/codebase/providers/allanime/: gql_api.py
ap0dl/core/codebase/providers/animepahe/: __init__.py
ap0dl/core/codebase/providers/animtime/: __init__.py
ap0dl/core/codebase/providers/kamyroll/: api.py
ap0dl/core/codebase/providers/marinmoe/: __init__.py
ap0dl/core/config/: __init__.py
ap0dl/utils/: __init__.py  http_caching.py  http_client.py  optopt.py  searching.py
