[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ap0dl"
version = "1.6.0"
description = "Efficient, fast, powerful and light-weight anime multi-purpose tool"
readme = "readme.txt"
authors = [ "rares9301 <rares.sarmasag@stud.acs.upb.ro>",]
license = "GPT-3"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
anchor-kr = "~=0.1.3"
anitopy = "~=2.1.0"
click = ">=8.0.4,<8.2.0"
comtypes = "~=1.1.11"
cssselect = ">=1.1,<1.3"
httpx = "~=0.23.0"
tqdm = ">=4.62.3,<4.66.0"
pycryptodomex = "~=3.14.1"
regex = "~=2022.10.31"
yarl = "~=1.8.1"
pyyaml = "~=6.0"
packaging = ">=22,<24"
pkginfo = "^1.9.2"
rich = ">=13.3.1,<13.3.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ap0dl = "ap0dl.__main__:__ap0dl_cli__"

[tool.poetry.dependencies.lxml]
version = "4.9.1"
markers = "sys_platform != 'win32'"
